[metadata]
name = qfnn
version = 0.2.0
author = Weiwen Jiang, Zhirui Hu
author_email = wjiang8@gmu.edu
description = A library to support QuantumFlow series works
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weiwenjiang/QuantumFlow_Tutorial
project_urls =
    Bug Tracker = https://github.com/weiwenjiang/QuantumFlow_Tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

